 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Release 0.12.1 (unreleased changes)

IMPROVEMENTS

PIG-3549: Print hadoop jobids for failed, killed job (aniket486)

PIG-3047: Check the size of a relation before adding it to distributed cache in Replicated join (aniket486)

PIG-3480: TFile-based tmpfile compression crashes in some cases (dvryaboy via aniket486)

BUG FIXES

PIG-3530: Some e2e tests is broken due to PIG-3480 (daijy)

PIG-3492: ColumnPrune dropping used column due to LogicalRelationalOperator.fixDuplicateUids changes not propagating (knoguchi via daijy)

PIG-3325: Adding a tuple to a bag is slow (dvryaboy via aniket486)

PIG-3512: Reducer estimater is broken by PIG-3497 (daijy)

PIG-3510: New filter extractor fails with more than one filter statement (aniket486 via cheolsoo)

Release 0.12.0

INCOMPATIBLE CHANGES

PIG-3082: outputSchema of a UDF allows two usages when describing a Tuple schema (jcoveney)

PIG-3191: [piggybank] MultiStorage output filenames are not sortable (Danny Antonelli via jcoveney)

PIG-3174: Remove rpm and deb artifacts from build.xml (gates)

IMPROVEMENTS

PIG-3503: More document for Pig 0.12 new features (daijy)

PIG-3445: Make Parquet format available out of the box in Pig (lbendig via aniket486)

PIG-3483: Document ASSERT keyword (aniket486 via daijy)

PIG-3470: Print configuration variables in grunt (lbendig via daijy)

PIG-3493: Add max/min for datetime (tyro89 via daijy)

PIG-3479: Fix BigInt, BigDec, Date serialization. Improve perf of PigNullableWritable deserilization (dvryaboy)

PIG-3461: Rewrite PartitionFilterOptimizer to make it work for all the cases (aniket486)
