@@ -22,6 +22,8 @@ Release 0.12.1 (unreleased changes)
 
 IMPROVEMENTS
 
+PIG-3552: UriUtil used by reducer estimator should support viewfs (amatsukawa via aniket486)
+
 PIG-3549: Print hadoop jobids for failed, killed job (aniket486)
 
 PIG-3047: Check the size of a relation before adding it to distributed cache in Replicated join (aniket486)
